# travel-planner

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: app.py  config.py
src/api/v1/: __init__.py  places.py  projects.py
src/clients/: artic_client.py
src/core/: exceptions.py
src/db/: session.py
src/db/models/: place.py  project.py
src/db/repositories/: place_repository.py  project_repository.py
src/schemas/: artic.py  pagination.py  place.py  project.py
src/services/: place_service.py  project_service.py
src/system/: logging.py  resources.py
